# GameOfLife

./: CMakeLists.txt
src/: main.cpp
